freelancer, volunteer, studio

--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -381,3 +381,12 @@ vr marketing manager
 communications in vr
 crypto vr
 
+
+
+
+** Freelancer
+get involved, per project, hire production, freelancing, freelancer, production manager, developer, coder, programmer, technician , systems engineer, designer, animator, sketch artists, 
+
+** Studios and Labs
+
+virtual reality possible, best in the business, top studios in new york, production vr network, vr industry, xr media network, virtual reality insiders
