--- a/Pages/3About nova/2Partnership/studio---4web.org
+++ b/Pages/3About nova/2Partnership/studio---4web.org
@@ -1,21 +1,16 @@
 * Header
 
-
-Family and Friends
+  Studios and Innovation Labs
 
 * Second
 
-A loud shout to all our loved ones. 
+A loud shout to the artists and engineers that are changing the world with XR
 
 * Abstract
 
-
-
-Masas.fm 
-Youlabs.org
-Surfarrockaway.com 
-Redunyc.com 
-JoeMeccaLawPC.com 
+- OAB Studios
+- Potential Synergy
+- Mindfully Augmented
 
 
 
