--- a/Pages/3About nova/2Partnership/freelancer---4web.org
+++ b/Pages/3About nova/2Partnership/freelancer---4web.org
@@ -1,10 +1,20 @@
-* Header
+# Header
 
-Freelancer
+Freelancer 
 
-* Second
+# Second
 
-* Abstract
+Want part time work?
+
+# Abstract
+
+Nova hires designers, developers and technicians to particpate in global productions on a per-project basis.   Check out our products and past productions.  If you want to get involved, message Anna Irene and she'll hook you up.  AnnaIrene@novamedia.nyc+ + -
 
 
-* Content
+
+
+
+
+
+
+
