--- a/producttable.org
+++ b/producttable.org
@@ -11,8 +11,8 @@
  | 10. enterprise b2b        | sales preentation       | inside product             |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
  | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
  | 12. festival              | Live Event Marketing    | microar + perform on stage |         | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | +      | +    | -   | -    | +      | +  | -    | accounting     | no            | no     | +       | +        | +           | - |
- | 13. wellness              | Mindfullness in VR      | nature                     |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | - |
- | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
+ | 13. wellness              | Mindfullness in VR      | nature                     |         | -     | +     | -   | -   | -       |      |       | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | - |
+ | 14. 3d brand design       | 3d brand design         | 3d files                   |         | -     | -     | -   | -   | -       | +    | -     | -  | +   | -     | -      | -    | -   | -    | -      | -  | -    | -              | no            | no     | -       | -        | -           | - |
  | 15. anon on blockchain    | anonymous comp          | phone app                  |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
  | 16. ar branding           | brand, engage           | ar app phone               |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
  | 17. ar reatil             | sell on site            | vr store                   |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
