--- a/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/Features.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/Features.org
@@ -1,2 +1,7 @@
-Reach out and select a location off a virtual map. The new environment appears behind your field of view. Turn around 
-and you've arrived at your destination. 
+* Features
+
+- Reach out and select a location off a virtual map. 
+- New environment appears behind your field of view. 
+- Turn around and you've arrived at your destination. 
+- Customized locations: neighborhoods, apartment units, offices, schools, etc. 
+- Customized Lobby
