--- a/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/Benefits.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/Benefits.org
@@ -1,1 +1,7 @@
-Improving efficiency of business travel
+* Benefits 
+- Reduce cost of relocation travel
+- Allow assignee to select from a wider range of potential cities 
+- Reduce fatigue by reducing assignee travel quantity 
+- Find new home quickly and more efficiently
+- Reduce cost of on-site tour guide/consultant 
+- Lead your industry into the future of internal cost reduction through advanced technology
