Bloomaway update product table

--- a/producttable.org
+++ b/producttable.org
@@ -2,7 +2,7 @@
  | 1. architect              | blueprint               | sketch house               | feb 12  | +     | -     | -   | +   | +       | +    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | google blocks | -      | -       | +        | +           | + |
  | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +     | -     | -   | +   | +       | -    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | tilt brush    | -      | -       | +        | +           | + |
  | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | +     | -      | -    | +   | -    | -      | +  | -    | -              | accounting    | -      | -       | +        | +           | + |
- | 4. bloomaway              | transportati            | embossed map               | feb 12  | +     | -     | -   | +   | +       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              | realities     | -      | -       | +        | +           | + |
+ | 4. bloomaway              | transportati            | embossed map               | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | -    | +      | -  | -    | -              | realities     | -      | +       | +        | +           | + |
  | 5. infinite               | view content            | art gallery                | feb 12  | +     | +     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | n-             |               | yes    | -       | -        | -           | - |
  | 6. facematch              | ad-view verify          | phone application          | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
  | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | - |
