--- a/Pages/1Solutions/1Products/Jan Launch/New Years Eve [DONE]/Features.org
+++ b/Pages/1Solutions/1Products/Jan Launch/New Years Eve [DONE]/Features.org
@@ -1,3 +1,6 @@
 * Features
+
 - Brand your own Virtual lobby 
 - Bring guests around the world in VR
+- Interact with old and new friends
+- 3D audio
