--- a/Pages/1Solutions/2Consultation/Learning Lab/vrinstallationstext_finalized.org
+++ b/Pages/1Solutions/2Consultation/Learning Lab/vrinstallationstext_finalized.org
@@ -1,21 +1,7 @@
 
 ***** Installations and Training
 
-Custom outfit your home location to be a VR theater.   Install the latest in computer, gaming and immersion technologies.
 
-
-
-Basic Installation:
-
-Hardware Video graphics card : GeForce 1080x
-Processor : Intel i7 quad core
-Head mounted display : HTC Vive
-Position tracker : Valve lighthouse
-Software Operating system : Windows 10
-Content platform : Steam
-Modelling tool : Blender
-Graphic tool : Photoshop
-Game engine : Unity
 
 XR Training
 Training your team to understand, operate, and troubleshoot VR will be critical to success.
@@ -25,4 +11,4 @@ including, but not limited to, the following :
 • How to integrate VR in your existing systems to better assist your clients 
 • How to handle and troubleshoot VR hardware and software 
 • The limitations of the technology and latest breakthroughs 
-• How to create your own VR content
+• How to create your own VR 
