--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Benefits.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Benefits.org
@@ -1,4 +1,6 @@
 * Benefits
 
 - Enhanced physical connection between user and product 
-- Create symmetry between your virtual space and physical place
+- Create symmetry between your business' physical and virtual space
+- Adopt advanced technology
+- Expand demographic 
