--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Features.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Features.org
@@ -5,3 +5,4 @@
 - Upload existing images of your products 
 - Integrate existing images of your products into gallery
 - Unlimited quantity of content display 
+- Sell products from directly inside VR
