--- a/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/Benefits.org
+++ b/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/Benefits.org
@@ -1,4 +1,5 @@
 * Benefits 
 - Edcuate users on intricacies of color spectrum 
 - Provide health outlet for designers and developers to be out of their seat and in motion while completing their work
-- 
+- Enhance quality of color and texture in Virtual World
+- Make color more accessible 
