--- a/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/creativeform.org
+++ b/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/creativeform.org
@@ -1,6 +1,6 @@
 ** XR Color Creative form:
 
-What is the important of color?
+What is the importance of color?
 
 How do you use colors to express emotions?
 
