--- a/producttable.org
+++ b/producttable.org
@@ -1,6 +1,6 @@
- | funx                      | form                    | launch                     | graphic | Intro | exsum | ft. | ben | invstmt | rsch | ursty | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal         | budget | tagline | Abstract | Description |   |
+ | funx                      | form                    | launch                     | graphic | Intro | exsum | ft. | ben | invstmt | rsch | ursty | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal         | budget | tagline | Abstract | Description |VO |
  | 1. architect              | blueprint               | sketch house               | feb 12  | +     | -     | -   | +   | +       | +    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | google blocks | -      | -       | +        | +           | + |
- | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +     | -     | -   | +   | +       | -    | -     | -  | -   | -     | -      | -    | -   | +    | -      | -  | -    | -              | tilt brush    | -      | -       | +        | +           | + |
+ | 2. color                  | chose colors            | 3D Color Palet             | feb 12  | +     | -     | +   | +   | -       | +    | -     | -  | -   | -     | -      | -    | +   | +    | -      | +  | -    | -              | tilt brush    | -      | +       | +        | +           | + |
  | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | +     | -      | -    | +   | -    | -      | +  | -    | -              | accounting    | -      | -       | +        | +           | + |
  | 4. bloomaway              | transportati            | embossed map               | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | -    | +      | -  | -    | -              | realities     | -      | +       | +        | +           | + |
  | 5. infinite               | view content            | art gallery                | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | +    | -      | +  | -    | n-             |               | -      | +       | +        | +           | + |
