--- a/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
@@ -1,3 +1,4 @@
+* Description
 
 #  The VR Solution
 The early days of Virtual Reality have revealed a fundamental flaw in the user experience, and it's among the core reasons why this budding technology is not yet widespread. Much like a computer without a mouse, Virtual Reality without the Tours can be a clumsy and indirect experience for the user. 
