--- a/producttable.org
+++ b/producttable.org
@@ -4,7 +4,7 @@
  | 3. music                  | discover, share, create | Listen on the Moon         | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | +     | -      | -    | +   | -    | -      | +  | -    | -              | accounting    | -      | -       | +        | +           | +  |
  | 4. bloomaway              | transportati            | embossed map               | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | -    | +      | -  | -    | -              | realities     | -      | +       | +        | +           | +  |
  | 5. infinite               | view content            | art gallery                | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | +    | -      | +  | -    | n-             |               | -      | +       | +        | +           | +  |
- | 6. facematch              | ad-view verify          | phone application          | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | 6. facematch              | ad-view verify          | phone application          | feb 12  | +     | +     | -   | -   | +       | +    | -     | +  | +   | +     | +      | +    | +   | -    | +      | +  | +    | -              |               | +      | -       | -        | -           | -  |
  | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
