Update About Us Page.org

--- a/Pages/3About nova/1Who we are/About Us Page.org
+++ b/Pages/3About nova/1Who we are/About Us Page.org
@@ -2,7 +2,7 @@ Nova XR is a team of artists and technicians programming new media.  Our special
 
 "Nova" is latin for /new/, contrasting the future with fundamentals.   We chose the name because it is simple, versatile and expressive of our work to innovate media technologies.   
 
-Virtual Reality brings us to a place where the confines of the physical world can disapear. Time and gravity and our relationship with space have been as much a part of the human experience as our need for air. Now, as the architects of these virtual worlds, we breathe the same air while breaking free from physical measurements.
+Virtual Reality brings us to a place where the confines of the physical world can disappear. Time and gravity and our relationship with space have been as much a part of the human experience as our need for air. Now, as the architects of these virtual worlds, we breathe the same air while breaking free from physical measurements.
  
 We're reminded of our quest for this new idea of freedom every time we look out the window of our Nova Studios in South Brooklyn and see Liberty Island and her.
 
