--- a/producttable.org
+++ b/producttable.org
@@ -6,7 +6,7 @@
  | 5. infinite               | view content            | art gallery                | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | -   | +     | -      | -    | +   | +    | -      | +  | -    | n-             |               | -      | +       | +        | +           | +  |
  | 6. facematch              | ad-view verify          | phone application          | feb 12  | +     | +     | -   | -   | +       | +    | -     | +  | +   | +     | +      | +    | +   | -    | +      | +  | +    | -              |               | +      | -       | -        | -           | -  |
  | 7. live stream            | telepresence            | live 360 video)            | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
- | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
+ | 8. nye                    | entertainment           | cg lobby + 360 video       | feb 12  | +     | +     | +   | +   | +       | +    | +     | +  | +   | -     | +      | +    | +   | -    | +      | -  | +    | y              | bloomaway     | +      | +       | +        | +           | -  |
  | 9. live forever           | immortalize             | 3d avatar                  | march 1 | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 10. enterprise b2b        | sales preentation       | inside product             |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
  | 11. exhibit               | onsite edu / ent        | microarch + underwater     |         | -     | -     | -   | -   | -       | -    | -     | -  | -   | -     | -      | -    | -   | -    | -      | -  | -    | -              |               |        | -       | -        | -           | -  |
