--- a/Pages/novacognito/Lab Live/lean-managementlivelab.org
+++ b/Pages/novacognito/Lab Live/lean-managementlivelab.org
@@ -1,4 +1,4 @@
-I have to learn what it means to be /lean/. It's on my TODOs. So I bumped some music and sat at my word editor, writing this.
+I have to learn what it means to be /lean/. It's on my TODOs. So I bumped some music and sat at my text editor, writing this.
 
 /Lean/ gives start-ups a framework to innovate, sustain, and become profitable. Basically, produce development methodology - answering, /Can this product yield a worthy return on investment?/
 
